# svg_translate_web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  code-improvements.md  cron-jobs.yaml  db_tables_dump.sql  mysql_connection_pooling_plan.md  mysql_connection_pooling_plan_improved.md  mysql_pooling_concise.md  nested_plan.md  nested_point_plan.md  prompt.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runlocal.py  sql_tables.sql  tasks.md  test_tree.md  tests.md  tests_dirs.py  tree.md  tree.txt  z.py  z_md
.claude/flask/: SKILL.md
.claude/skills/flask-soc-audit/: SKILL.md
.claude/skills/patch-to-fixture/: SKILL.md
.github/workflows/: deploy.yaml  oc.yml  opencode.yml  pytest.yaml  update3.yml
.jules/: bolt.md
_works_files/: add_all.py  rename_owid_pages.py  test_tree.md  tests_dirs.py  tree.md  tree.py  z2.py
docs/: create.md  download_functions_comparison_report.md  flask_audit.md  flask_security_migration_plan.md  one.md  p.md  prompt_test_classification_agent.md  settings_feature_plan.md
docs/plans/: add_lang_categories_to_owid_pages.md  crop_main_files_job_plan.md  optimize_templates_page_plan.md  slugs.md  sqlalchemy_to_flask_sqlalchemy_migration.md  update_owid_charts_job.md
offline/: collect_main_files.py
plans/: TODO.md  create_tests_placeholders.md  db_vs_sqlalchemy_services_findings.md  fix_nested_public_jobs_integration.md  n.md.old  pytest_migration_report.md  test_classification_report_main_app.md  test_classification_report_remaining.md
src/: __init__.py  app.py  app1.py  example.env  import_owid_charts.py  log.py  logger_config.py  owid_template_converter.py  requirements-test.txt  requirements.txt  svg_config.py  uwsgi.ini
src/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/app/: __init__.py  collect_main_files_worker.py  config.py  crypto.py  fix_nested_main_files_worker.py  jobs_service.py  jobs_worker.py  routes_utils.py  template_service.py
src/app/admins/: admin_service.py  admins_required.py
src/app/app_routes/: __init__.py
src/app/commons/: __init__.py  category.py  temps_bot.py  text_bot.py
src/app/db/: __init__.py  db_CoordinatorsDB.py  db_CreateUpdate.py  db_Jobs.py  db_StageStore.py  db_TasksListDB.py  db_Templates.py  db_class.py  fix_nested_task_store.py  svg_db.py  task_store_pymysql.py  utils.py
src/app/jobs_workers/: collect_main_files_worker.py  fix_nested_main_files_worker.py  jobs_service.py  jobs_worker.py
src/app/tasks/: start_bot.py  tasks_utils.py
src/app/threads/: fix_nested_tasks.py  inject_tasks.py  task_threads.py  web_run_task.py
src/app/users/: current.py  store.py
src/app/web/: start_bot.py
src/main_app/: __init__.py  admins_required.py  compat.py  config.py  engine.py  extensions.py  jinja_filters.py  owid_charts_service.py  routes_utils.py  scheduler.py  template_service.py
src/main_app/admin/: __init__.py  admin_panel.py  decorators.py  flask_admin_panel.py  route.py  sidebar.py
src/main_app/admins/: admin_service.py  admins_required.py
src/main_app/api_services/: README.md  __init__.py  category.py  download_file_utils.py  errors.py  files_service.py  mwclient_page.py  pages_api.py  query_api.py  text_api.py  text_bot.py  upload_bot.py  upload_bot_new.py
src/main_app/app_routes/: __init__.py  api_routes.py  jobs_routes_utils.py  jobs_utils_bp.py  owid_charts_routes.py  profile.py  public_jobs.py  routes_utils.py
src/main_app/config/: __init__.py  classes.py  flask_config.py  main_settings.py  settings.py
src/main_app/core/: crypto.py  jinja_filters.py
src/main_app/data/: __init__.py  owid_charts.csv  templates_slugs_topics.json  topics_categories.json
src/main_app/db/: __init__.py  batch_processor.py  create_helper.py  db_CoordinatorsDB.py  db_CreateUpdate.py  db_Jobs.py  db_OwidCharts.py  db_Settings.py  db_StageStore.py  db_TasksListDB.py  db_Templates.py  db_TemplatesNeedUpdate.py  db_class.py  db_sqlalchemy.py  engine.py  engine_factory.py  engine_sqlite.py  exceptions.py  fix_nested_task_store.py  sql_schema_ensure_tables.py  sql_schema_tables.py  sql_shema_tables.py  svg_db.py  task_store_pymysql.py  (+3 more)
src/offline/: collect_main_files.py  collect_templates_data.py  error.txt  sitemap.py
src/templates/: _macros.html  _navbar.html  base.html  index.html  index_db_error.html  profile.html  task.html  task2.html  tasks.html
tests/: Test Classification Report.md  conftest.py  prompt_test_classification_agent.md  test_admin_jobs_routes.py  test_admin_routes.py  test_admin_templates_routes.py  test_app.py  test_auth_cookie.py  test_connection_reuse.py  test_jobs_service.py  test_jobs_worker.py  test_logger_config.py  test_logger_consistency.py  test_task2_ui.py  test_task_routes.py  test_task_store_pymysql.py  test_task_threads.py  test_users_store.py  test_wiki_client.py  tests-plan.md
tests/app/: test___init__.py  test_app_factory.py  test_config.py  test_crypto.py  test_routes_utils_unit.py  test_template_service.py
tests/integration/: conftest.py  test_app_factory_regression.py
tests/main_app/: test___init__.py  test_admins_required.py  test_app_factory.py  test_config.py  test_data.py  test_jinja_filters.py  test_log_module.py  test_owid_charts_service.py  test_template_service.py
tests/network/: README.md  network_conftest.py
tests/new_tests/: test_coordinators_exception_handling.py  test_db_create_update.py  test_db_stage_store.py  test_log_module.py  test_logger_consistency.py  test_task_routes_url_fix.py  test_template_service.py  test_templates_admin_routes.py
tests/routes_utils/: test_routes_utils_unit.py
tests/test_jobs_worker/: test_collect_main_files_worker.py  test_fix_nested_main_files_worker.py  test_jobs_worker.py
tests/test_jobs_workers/: test_collect_main_files_worker.py  test_fix_nested_main_files_worker.py  test_worker_cancellation.py
tests/unit/: conftest.py  test_app_factory_regression_unit.py  test_config.py  test_data.py  test_extensions.py  test_init.py
toolforge_tool/: jobs.yaml
toolforge_tool/shs/: pip.sh  run_job.sh  update.sh
web_sh/: pip.sh  run_job.sh  update.sh
(+1371 files in other folders)
