
[project]
name = "copy-svg-files"
version = "0.0.0"
description = "Flask app for svg files tools."
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7"]
# ============================================
#                 BLACK
# ============================================
[tool.black]
line-length = 120
target-version = ["py313"]
# include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
      | typings
      | site-packages
    )/
'''

# ============================================
#                 ISORT
# ============================================
[tool.isort]
profile = "black"
line_length = 120

# Keep vertical formatting (multi-line import style)
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true

# OPTIONAL: You can add this to ensure isort does NOT collapse into one line
ensure_newline_before_comments = true

# Project paths
skip = [
    ".env",
    "env",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".git",
]

# ============================================
#                 RUFF
# ============================================
[tool.ruff]
exclude = [
    # System & Version Control
    "**/$RECYCLE.BIN/**",
    "**/.git/**",
    "**/.git-rewrite/**",
    "**/.hg/**",
    "**/.svn/**",

    # Editors & IDEs
    "**/.vscode/**",
    "**/.ipynb_checkpoints/**",

    # Python Caches & Environments
    "**/__pycache__/**",
    "**/.venv/**",
    "**/venv/**",
    "**/.pyenv/**",
    "**/site-packages/**",
    "**/__pypackages__/**",

    # Tools, Linters & Builders
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "**/.ruff_cache/**",
    "**/.nox/**",
    "**/.pants.d/**",
    "**/.pytype/**",
    "**/.tox/**",
    "**/_build/**",
    "**/buck-out/**",
    "**/build/**",
    "**/dist/**",

    # Project Specific Modules & Vendors
    "**/node_modules/**",
    "**/setuptools/**",
    "**/typings/**",
    "**/vendor/**",

    # Archive & Old Codes
    "**/old/**",
    "**/OLD_REPOS/**",
    "**/OldCodes/**",
    "**/core8/**",
    "**/i18n/**",
    "**/MagicMock/**",

    # Global System Paths
    "C:/**",
]
line-length = 120
target-version = "py313"
fix = true

[tool.ruff.format]
# Allow Ruff/Black to maintain vertical list formatting
skip-magic-trailing-comma = false

# Keep Black-like behavior
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Format code blocks inside docstrings (excellent for README-like docstrings)
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
ignore = [
    "E501", # Line too long
    "F841", # Local variable is assigned to but never used
    # "N802",  # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    # "UP007", # Use `X | Y` for type annotations instead of `Optional[X]`
    "UP031", # Use format specifiers instead of percent format
    # "UP045", # Use `X | None` instead of `Optional[X]`
    # "UP006",  # Use `list` instead of `List` for type annotations
    # "UP035",  # Use `X | Y` for type unions instead of `Union[X, Y]`
    "I001", # Import block is un-sorted or un-formatted
    # "N999",   # Invalid module name
    "UP015", # Unnecessary open mode parameters
]
select = [
    "E",       # pycodestyle (error)
    "F",       # pyflakes
    "W",       # pycodestyle (warning)
    "B",       # flake8-bugbear
    "I",       # isort
    "N",       # pep8-naming
    "PIE",     # flake8-pie
    "PLE",     # pylint error
    "RUF100",  # Unused noqa comments
    "PGH004",  # blanket noqa comments
    "UP",      # pyupgrade
    "C4",      # flake8-comprehensions
    "SIM101",  # merge duplicate isinstance calls
    "SIM201",
    "SIM202",
    "SIM222",
    "SIM223",  # flake8-simplify
    "FURB168", # Prefer is operator over isinstance for None checks
    "FURB169", # Do not use is comparison with type(None). Use None
    "FURB187", # avoid list reverse copy
    "FURB188", # use str.remove(pre|suf)fix
    "ISC001",  # implicitly concatenated string
    "RET501",
    "RET502",  # better return None handling
]
# ============================================
#                 Flynt
# ============================================
[tool.flynt]
# Keep it aligned with Black/Ruff
line_length = 120

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "R0913", # too-many-arguments
]


[tool.pyright]
reportIncompatibleMethodOverride = "none"
# Target Python version for type analysis
pythonVersion = "3.13"
stubPath = "typings"
# Paths to include and exclude from checking
include = ["src", "src/new"]
exclude = [
    # System & Version Control
    "**/$RECYCLE.BIN/**",
    "**/.git/**",
    "**/.git-rewrite/**",
    "**/.hg/**",
    "**/.svn/**",

    # Editors & IDEs
    "**/.vscode/**",
    "**/.ipynb_checkpoints/**",

    # Python Caches & Environments
    "**/__pycache__/**",
  "**/.venv/**",
    "**/venv/**",
    "**/.pyenv/**",
    "**/site-packages/**",
    "**/__pypackages__/**",

    # Tools, Linters & Builders
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "**/.ruff_cache/**",
    "**/.nox/**",
    "**/.pants.d/**",
    "**/.pytype/**",
    "**/.tox/**",
    "**/_build/**",
    "**/buck-out/**",
    "**/build/**",
    "**/dist/**",

    # Project Specific Modules & Vendors
    "**/node_modules/**",
    "**/setuptools/**",
    "**/typings/**",
    "**/vendor/**",

    # Archive & Old Codes
  "**/old/**",
  "**/OLD_REPOS/**",
  "**/OldCodes/**",
    "**/core8/**",
    "**/i18n/**",
    "**/MagicMock/**",

    # Global System Paths
    "C:/**",
]

# Diagnostic modes: "basic" or "standard" or "strict"
typeCheckingMode = "standard"

# Automatically find virtual environments
venvPath = "."
venv = ".venv"

reportPrivateUsage = false
reportMissingTypeArgument = false
reportUnknownMemberType = false
reportUnknownVariableType = false

reportUnusedFunction = false
reportUnusedVariable = false
reportMissingParameterType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false

# Fine-tune specific warning rules
reportPossiblyUnboundVariable = true
reportGeneralTypeIssues = false
enableReachabilityAnalysis = false
strictListInference = false
strictDictionaryInference = false
strictSetInference = false
deprecateTypingAliases = false
enableExperimentalFeatures = false

analyzeUnannotatedFunctions = true
disableBytesTypePromotions = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
reportMissingModuleSource = "warning"
reportInvalidTypeForm = "warning"
reportMissingImports = "error"
reportUndefinedVariable = "warning"

reportReturnType = false
reportArgumentType = false
reportAttributeAccessIssue = "warning"
reportAssignmentType = "warning"
reportOptionalMemberAccess = "warning"
reportCallIssue = "warning"
reportOptionalSubscript = "warning"

reportAbstractUsage = false
reportAssertAlwaysTrue = false
reportAssertTypeFailure = false
reportCallInDefaultInitializer = false
reportConstantRedefinition = false
reportDeprecated = false
reportDuplicateImport = false
reportFunctionMemberAccess = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false
reportImportCycles = false
reportIncompatibleVariableOverride = false
reportIncompleteStub = false
reportInconsistentOverload = false
reportIndexIssue = false
reportInvalidStringEscapeSequence = false
reportInvalidStubStatement = false
reportInvalidTypeArguments = false
reportInvalidTypeVarUse = false
reportMatchNotExhaustive = false
reportMissingSuperCall = false
reportOperatorIssue = false
reportOptionalCall = false
reportOptionalContextManager = false
reportOptionalIterable = false
reportOptionalOperand = false
reportOverlappingOverload = false
reportPrivateImportUsage = false
reportPropertyTypeMismatch = false
reportRedeclaration = false
reportTypeCommentUsage = false
reportTypedDictNotRequiredAccess = false
reportUnboundVariable = false
reportUnhashable = false
reportUninitializedInstanceVariable = false
reportUnknownLambdaType = false
